--- a/labs/lab-02-14-19.md
+++ b/labs/lab-02-14-19.md
@@ -3,7 +3,7 @@
 
 ## Today, we'll try to wrap up our plots of sea level anomaly using for loops.
 
-### Here's a checklist of what you have accomplished and still need to do.
+### Here's a checklist of what you have accomplished, as well as what we still need to do.
 
 - [x] Plot sea level anomaly from our dataset with the pcolor function
 - [x] Write a function that plots SLA for any given day
