--- a/labs/lab-02-14-19.md
+++ b/labs/lab-02-14-19.md
@@ -11,7 +11,7 @@
 - [x] Use str.format to change the plot title in our function depending on the day argument
 - [ ] Use str.format and our converted dates variable to make the plot date aware (i.e. printing `SLA on 1/1/1993`, rather than `SLA on day 1`)
 - [ ] Save the output of our plot within our function
-- [ ] Write a for loop with our function inside, so that we can plot all of our data at once!
+- [ ] Write a for loop with our function inside, so that we can plot all of our data at once! Don't worry about restricting the loop to the year of data you picked just yet – try setting the range to select our entire dataset.
 - [ ] Pick the range of our for loop so that we only plot a single year of data. Each pair can pick their own year.
 - [ ] Run code!
 - [ ] Make movie!
