--- a/labs/lab_03_21_19.md
+++ b/labs/lab_03_21_19.md
@@ -4,11 +4,11 @@
 
 Open up Atom and create a new file with the .py extension. You can write your solutions to these exercises here.
 
-1. In Scrabble, different letters are worth different numbers of points. Can you write a function that takes in a word and returns its scrabble score? 
-
-This dictionary contains the number of points each letter is worth: 
-```
-SCORES = {"a": 1, "c": 3, "b": 3, "e": 1, "d": 2, "g": 2, "f": 4, "i": 1, "h": 4, "k": 5, "j": 8, "m": 3, "l": 1, "o": 1, "n": 1, "q": 10, "p": 3, "s": 1, "r": 1, "u": 1, "t": 1, "w": 4, "v": 4, "y": 4, "x": 8, "z": 10}```
+1. In Scrabble, different letters are worth different numbers of points. Can you write a function that takes in a word and returns its scrabble score? This dictionary contains the number of points each letter is worth: 
+    
+    ```
+    SCORES = {"a": 1, "c": 3, "b": 3, "e": 1, "d": 2, "g": 2, "f": 4, "i": 1, "h": 4, "k": 5, "j": 8, "m": 3, "l": 1, "o":         1, "n": 1, "q": 10, "p": 3, "s": 1, "r": 1, "u": 1, "t": 1, "w": 4, "v": 4, "y": 4, "x": 8, "z": 10}
+    ```
 
 For example, the word `ocean` would be worth 1 + 3 + 1 + 1 + 1 = 7 points.
 
@@ -16,11 +16,12 @@ For example, the word `ocean` would be worth 1 + 3 + 1 + 1 + 1 = 7 points.
 2. Nested for loops allow us to keep track of two or more changing variables in a for loop. 
 
 For example, 
-```
-for i in range(0,10):
-  for j in range(0, 5):
-    print(i + j)
-```
+
+    ```
+    for i in range(0,10):
+      for j in range(0, 5):
+        print(i + j)
+    ```
 
 is a nested for loop that allows us to loop through the values 0 to 10 and 0 through 5 and add them together. Every time we step through a value in the outer loop, every value in the inner loop is looped through. Can you guess how many loops we ultimately go through (i.e. how many printed out values there will be?)
 
